format workflow should work now

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,4 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: format
-      run: cargo fmt
+      run: |
+      cargo fmt -- --check
+      git diff --exit-code || { git config --global user.name "Github Actions"; git commit -am "chore: cargo fmt"; git push origin main; }
