--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: format
       run: |
-      cargo fmt -- --check
-      git diff --exit-code || { git config --global user.name "Github Actions"; git commit -am "chore: cargo fmt"; git push origin main; }
+      cargo fmt && git config --global user.name "Github Actions"; git commit -am "chore: cargo fmt"; git push origin main
