--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,10 +11,12 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: format
-      run: cargo fmt && git config --global user.name "Github Actions"; git commit -am "chore: cargo fmt"; git push origin main
+      - uses: actions/checkout@v3
+      - name: Format code
+        run: |
+          cargo fmt
+          git config --global user.name "Github Actions"
+          git commit -am "chore: cargo fmt"
+          git push origin main
