--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,13 +10,13 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  format:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
+      - uses: stefanzweifel/git-auto-commit-action@v5
+      
       - name: Format code
-        run: |
-          cargo fmt
-          git config --global user.name "Github Actions"
-          git commit -am "chore: cargo fmt"
-          git push origin main
+        run: cargo fmt
